# mcp-guardian

./: .gitignore  Dockerfile.docs  README.md  TESTING.md  guardian.yaml  guardian.yaml.example  mkdocs.yml  pyproject.toml  requirements.txt
demos/exfiltration/: README.md  guardian.yaml  run_demo.sh
docs/: index.md
docs/api/: guardian-config.md  guardian-tool-guardrail.md  intent-policy.md
docs/architecture/: enforcement-tiers.md  how-it-works.md  overview.md  sdk-integration.md
docs/configuration/: authentication.md  guardian-config.md  multi-server.md  policies.md
docs/examples/: demo-walkthrough.md  policy-examples.md
docs/getting-started/: installation.md  quickstart.md  three-lines.md
examples/: quickstart.py  quickstart_yaml.py
mcp_guardian/: GUARDIAN.md  __init__.py  config.py  guardian_hooks.py  intent_policy.py  orchestrator.py
mcp_guardian/examples/: __init__.py  doc_lookup_demo.py  guardrail_test.py  mcp_guardian_demo.py
policies/: data-pipeline.yaml  db-read-only.yaml  desktop-commander-readonly-glob.yaml  desktop-commander-readonly.yaml  exfiltration-prevention.yaml  local-only.json  local-only.yaml  permissive-monitor.yaml
tests/: test_glob_patterns.py  test_sanitize_schema.py
